--- a/index.html
+++ b/index.html
@@ -18,16 +18,18 @@
   --accent:#f7c948; --accent2:#ff6b6b; --green:#6fefb2;
   --text:#fffffe; --muted:#a7a9be; --border:rgba(255,255,255,0.08);
 }
+/* ── BASE FONT SCALE ── */
+html{font-size:18px;}
 *{margin:0;padding:0;box-sizing:border-box;}
-body{background:var(--bg);color:var(--text);font-family:'DM Sans',sans-serif;min-height:100vh;padding:1rem;
+body{background:var(--bg);color:var(--text);font-family:'DM Sans',sans-serif;min-height:100vh;padding:.6rem;
   background-image:radial-gradient(ellipse at 20% 10%,rgba(247,201,72,.06) 0%,transparent 60%),
     radial-gradient(ellipse at 80% 90%,rgba(111,239,178,.05) 0%,transparent 60%);}
 .container{max-width:760px;margin:0 auto;}
 .hidden{display:none!important;}
 
 /* ── HEADER ── */
-header{display:flex;align-items:center;justify-content:space-between;gap:1rem;
-  margin-bottom:1rem;padding:.6rem 1.25rem;border:1px solid var(--border);border-radius:12px;
+header{display:flex;align-items:center;justify-content:space-between;gap:.5rem;
+  margin-bottom:.5rem;padding:.4rem 1rem;border:1px solid var(--border);border-radius:12px;
   background:var(--surface);position:relative;overflow:hidden;}
 header::before{content:'';position:absolute;top:0;left:0;right:0;height:3px;
   background:linear-gradient(90deg,var(--accent),var(--green),var(--accent2));}
@@ -36,7 +38,7 @@ header h1 span{color:var(--accent);}
 header p{color:var(--muted);font-family:'DM Mono',monospace;font-size:.7rem;text-align:right;line-height:1.5;}
 
 /* ── NAV TABS ── */
-.tabs{display:flex;gap:.5rem;margin-bottom:.75rem;background:var(--surface);padding:.3rem;border-radius:10px;}
+.tabs{display:flex;gap:.5rem;margin-bottom:.5rem;background:var(--surface);padding:.3rem;border-radius:10px;}
 .tab{flex:1;padding:.45rem;border:none;border-radius:9px;cursor:pointer;font-family:'DM Sans',sans-serif;
   font-weight:600;font-size:.85rem;background:transparent;color:var(--muted);transition:all .2s;}
 .tab.active{background:var(--card);color:var(--text);}
@@ -99,20 +101,20 @@ header p{color:var(--muted);font-family:'DM Mono',monospace;font-size:.7rem;text
 /* ── PROGRESS ── */
 .progress-label{display:flex;justify-content:space-between;align-items:center;margin-bottom:.5rem;
   font-family:'DM Mono',monospace;font-size:.8rem;color:var(--muted);}
-.progress-bar-wrap{background:var(--surface);border-radius:20px;height:6px;margin-bottom:1.5rem;overflow:hidden;}
+.progress-bar-wrap{background:var(--surface);border-radius:20px;height:6px;margin-bottom:.75rem;overflow:hidden;}
 .progress-bar{height:100%;background:linear-gradient(90deg,var(--accent),var(--green));border-radius:20px;transition:width .4s ease;}
 
 /* ── QUESTION CARD ── */
-.question-card{background:var(--card);border:1px solid var(--border);border-radius:20px;padding:2rem;
-  margin-bottom:1.5rem;animation:slideIn .35s ease;}
+.question-card{background:var(--card);border:1px solid var(--border);border-radius:20px;padding:1.2rem 1.5rem;
+  margin-bottom:.75rem;animation:slideIn .35s ease;}
 @keyframes slideIn{from{opacity:0;transform:translateY(12px)}to{opacity:1;transform:translateY(0)}}
 .q-num{font-family:'DM Mono',monospace;font-size:.75rem;color:var(--accent);letter-spacing:.1em;text-transform:uppercase;margin-bottom:.5rem;}
 .q-cat{display:inline-block;font-family:'DM Mono',monospace;font-size:.7rem;padding:.2em .6em;border-radius:4px;
   background:rgba(167,169,190,.15);color:var(--muted);letter-spacing:.06em;text-transform:uppercase;margin-bottom:.75rem;}
 .q-starred{font-size:.85rem;color:var(--accent2);margin-left:.4rem;vertical-align:middle;}
-.q-text{font-size:1.1rem;font-weight:600;line-height:1.5;margin-bottom:1.5rem;}
-.options{display:flex;flex-direction:column;gap:.6rem;}
-.option{padding:.9rem 1.1rem;border:1px solid var(--border);border-radius:12px;cursor:pointer;
+.q-text{font-size:1.1rem;font-weight:600;line-height:1.5;margin-bottom:.9rem;}
+.options{display:flex;flex-direction:column;gap:.4rem;}
+.option{padding:.7rem .9rem;border:1px solid var(--border);border-radius:12px;cursor:pointer;
   font-size:.88rem;font-family:'DM Mono',monospace;background:var(--surface);color:var(--text);
   transition:all .2s;text-align:left;line-height:1.4;}
 .option:hover:not(:disabled){border-color:var(--accent);background:rgba(247,201,72,.06);transform:translateX(4px);}
@@ -120,7 +122,7 @@ header p{color:var(--muted);font-family:'DM Mono',monospace;font-size:.7rem;text
 .option.wrong{border-color:var(--accent2)!important;background:rgba(255,107,107,.1)!important;color:var(--accent2)!important;}
 .option.reveal{border-color:var(--green);background:rgba(111,239,178,.05);color:var(--green);}
 .option:disabled{cursor:default;}
-.explanation{margin-top:1.1rem;padding:.9rem 1.1rem;border-radius:12px;background:rgba(255,255,255,.04);
+.explanation{margin-top:.7rem;padding:.7rem .9rem;border-radius:12px;background:rgba(255,255,255,.04);
   border-left:3px solid var(--accent);font-size:.88rem;color:var(--muted);line-height:1.6;display:none;}
 .explanation strong{color:var(--text);}
 .nav{display:flex;justify-content:flex-end;margin-top:1.2rem;}
