--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
+  <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+  <meta http-equiv="Pragma" content="no-cache">
+  <meta http-equiv="Expires" content="0">
+  <meta name="app-version" content="v20260228-3fb1845b">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="theme-color" content="#0f0e17">
 <meta name="mobile-web-app-capable" content="yes">
@@ -576,7 +580,7 @@ header p{color:var(--muted);font-family:'DM Mono',monospace;font-size:.7rem;text
 
 <header>
   <h1>English <span>Grammar</span> Quiz</h1>
-  <p id="hdr-sub">multiple choice · fill the gap · smart repetition · progress tracking</p>
+  <p id="hdr-sub">multiple choice · fill the gap · smart repetition · vb340c0ab</p>
 </header>
 
 <!-- TABS -->
@@ -1894,44 +1898,44 @@ exp:'<strong>Put out</strong> (a fire) = extinguish it. Separable: <em>put the f
 
 // ══ BATCH 2 — ARTICLES: BASIC B1 ══
 
-{id:'art_b01',lvl:'B1',biz:false,cat:'Articles',type:'mcq',q:'Which is correct? (first mention of something new)',opts:['I saw the dog in the park.','I saw a dog in the park.','I saw dog in the park.'],ans:1,exp:'<strong>First mention</strong> of something the listener does not know yet — use <em>a/an.</em> <em>I saw a dog</em> = any dog, first time you mention it. <em>The dog</em> would be used only if the listener already knows which dog you mean.'}
+{id:'art_b01',lvl:'B1',biz:false,cat:'Articles',type:'mcq',q:'Which is correct? (first mention of something new)',opts:['I saw the dog in the park.','I saw a dog in the park.','I saw dog in the park.'],ans:1,exp:'<strong>First mention</strong> of something the listener does not know yet — use <em>a/an.</em> <em>I saw a dog</em> = any dog, first time you mention it. <em>The dog</em> would be used only if the listener already knows which dog you mean.'},
 // ── PAST SIMPLE vs PRESENT PERFECT (pspp) ──
-{id:'pspp01',q:'I <u>lost</u> my keys. / I <u>have lost</u> my keys. Which is more natural if the keys are still missing?',type:'mcq',options:['I lost my keys.','I have lost my keys.','Both are equally natural.','Neither is correct.'],a:'I have lost my keys.',cat:'Tenses',lvl:'B1',exp:'Present perfect is used when the result of a past action still affects the present — you still don\'t have the keys.'},
-{id:'pspp02',q:'She ___ never ___ sushi before. This is her first time.',type:'mcq',options:['has / eaten','did / eat','had / eaten','was / eating'],a:'has / eaten',cat:'Tenses',lvl:'B1',exp:'Present perfect is used for life experiences up to now. "Never" is a key signal.'},
-{id:'pspp03',q:'I ___ to Paris in 2019. It was a wonderful trip.',type:'mcq',options:['went','have gone','have been','was going'],a:'went',cat:'Tenses',lvl:'B1',exp:'A specific past time (2019) requires past simple, not present perfect.'},
-{id:'pspp04',q:'___ you ever ___ a horse?',type:'mcq',options:['Have / ridden','Did / ride','Do / ride','Had / ridden'],a:'Have / ridden',cat:'Tenses',lvl:'B1',exp:'"Ever" in questions about life experience uses present perfect.'},
-{id:'pspp05',q:'He ___ three cups of coffee today. (It is still morning.)',type:'mcq',options:['has had','had','was having','did have'],a:'has had',cat:'Tenses',lvl:'B1',exp:'The time period (today) is not finished, so present perfect is used.'},
-{id:'pspp06',q:'We ___ this film last week with some friends.',type:'mcq',options:['watched','have watched','were watching','did watch'],a:'watched',cat:'Tenses',lvl:'B1',exp:'"Last week" is a finished time period — past simple required.'},
-{id:'pspp07',q:'It is the best book I ___ ever ___.',type:'mcq',options:['have / read','did / read','had / read','am / reading'],a:'have / read',cat:'Tenses',lvl:'B2',exp:'Superlative + "ever" construction uses present perfect.'},
-{id:'pspp08',q:'___ the postman ___ yet?',type:'mcq',options:['Has / come','Did / come','Does / come','Had / come'],a:'Has / come',cat:'Tenses',lvl:'B1',exp:'"Yet" in questions signals present perfect — asking about a result expected by now.'},
+{id:'pspp01',q:'I <u>lost</u> my keys. / I <u>have lost</u> my keys. Which is more natural if the keys are still missing?',type:'mcq',opts:['I lost my keys.','I have lost my keys.','Both are equally natural.','Neither is correct.'],ans:1,cat:'Tenses',lvl:'B1',exp:'Present perfect is used when the result of a past action still affects the present — you still don\'t have the keys.'},
+{id:'pspp02',q:'She ___ never ___ sushi before. This is her first time.',type:'mcq',opts:['has / eaten','did / eat','had / eaten','was / eating'],ans:0,cat:'Tenses',lvl:'B1',exp:'Present perfect is used for life experiences up to now. "Never" is a key signal.'},
+{id:'pspp03',q:'I ___ to Paris in 2019. It was a wonderful trip.',type:'mcq',opts:['went','have gone','have been','was going'],ans:0,cat:'Tenses',lvl:'B1',exp:'A specific past time (2019) requires past simple, not present perfect.'},
+{id:'pspp04',q:'___ you ever ___ a horse?',type:'mcq',opts:['Have / ridden','Did / ride','Do / ride','Had / ridden'],ans:0,cat:'Tenses',lvl:'B1',exp:'"Ever" in questions about life experience uses present perfect.'},
+{id:'pspp05',q:'He ___ three cups of coffee today. (It is still morning.)',type:'mcq',opts:['has had','had','was having','did have'],ans:0,cat:'Tenses',lvl:'B1',exp:'The time period (today) is not finished, so present perfect is used.'},
+{id:'pspp06',q:'We ___ this film last week with some friends.',type:'mcq',opts:['watched','have watched','were watching','did watch'],ans:0,cat:'Tenses',lvl:'B1',exp:'"Last week" is a finished time period — past simple required.'},
+{id:'pspp07',q:'It is the best book I ___ ever ___.',type:'mcq',opts:['have / read','did / read','had / read','am / reading'],ans:0,cat:'Tenses',lvl:'B2',exp:'Superlative + "ever" construction uses present perfect.'},
+{id:'pspp08',q:'___ the postman ___ yet?',type:'mcq',opts:['Has / come','Did / come','Does / come','Had / come'],ans:0,cat:'Tenses',lvl:'B1',exp:'"Yet" in questions signals present perfect — asking about a result expected by now.'},
 
 // ── PRESENT PERFECT vs PRESENT PERFECT CONTINUOUS (pppc) ──
-{id:'pppc01',q:'I ___ this book for three hours. I need a break.',type:'mcq',options:['have been reading','have read','read','am reading'],a:'have been reading',cat:'Tenses',lvl:'B2',exp:'An activity that started in the past and is still ongoing (with duration) uses present perfect continuous.'},
-{id:'pppc02',q:'She ___ the report. It is on your desk.',type:'mcq',options:['has finished','has been finishing','finished','is finishing'],a:'has finished',cat:'Tenses',lvl:'B2',exp:'A completed action with a present result uses present perfect simple, not continuous.'},
-{id:'pppc03',q:'Your eyes are red. ___ you ___?',type:'mcq',options:['Have / been crying','Have / cried','Did / cry','Are / crying'],a:'Have / been crying',cat:'Tenses',lvl:'B2',exp:'Visible present evidence of a recent ongoing activity points to present perfect continuous.'},
-{id:'pppc04',q:'I ___ three emails this morning. (The morning is over.)',type:'mcq',options:['wrote','have written','have been writing','was writing'],a:'have written',cat:'Tenses',lvl:'B2',exp:'A completed quantity (three emails) in a finished time period uses past simple. If the period were unfinished, present perfect simple would be used.'},
-{id:'pppc05',q:'They ___ since 6am. They must be exhausted.',type:'mcq',options:['have been working','have worked','worked','are working'],a:'have been working',cat:'Tenses',lvl:'B2',exp:'"Since" with a continuous activity that implies ongoing effort uses present perfect continuous.'},
-{id:'pppc06',q:'How many pages ___ you ___ so far?',type:'mcq',options:['have / read','have / been reading','did / read','are / reading'],a:'have / read',cat:'Tenses',lvl:'B2',exp:'"How many" asks for a quantity — use present perfect simple, not continuous.'},
+{id:'pppc01',q:'I ___ this book for three hours. I need a break.',type:'mcq',opts:['have been reading','have read','read','am reading'],ans:0,cat:'Tenses',lvl:'B2',exp:'An activity that started in the past and is still ongoing (with duration) uses present perfect continuous.'},
+{id:'pppc02',q:'She ___ the report. It is on your desk.',type:'mcq',opts:['has finished','has been finishing','finished','is finishing'],ans:0,cat:'Tenses',lvl:'B2',exp:'A completed action with a present result uses present perfect simple, not continuous.'},
+{id:'pppc03',q:'Your eyes are red. ___ you ___?',type:'mcq',opts:['Have / been crying','Have / cried','Did / cry','Are / crying'],ans:0,cat:'Tenses',lvl:'B2',exp:'Visible present evidence of a recent ongoing activity points to present perfect continuous.'},
+{id:'pppc04',q:'I ___ three emails this morning. (The morning is over.)',type:'mcq',opts:['wrote','have written','have been writing','was writing'],ans:1,cat:'Tenses',lvl:'B2',exp:'A completed quantity (three emails) in a finished time period uses past simple. If the period were unfinished, present perfect simple would be used.'},
+{id:'pppc05',q:'They ___ since 6am. They must be exhausted.',type:'mcq',opts:['have been working','have worked','worked','are working'],ans:0,cat:'Tenses',lvl:'B2',exp:'"Since" with a continuous activity that implies ongoing effort uses present perfect continuous.'},
+{id:'pppc06',q:'How many pages ___ you ___ so far?',type:'mcq',opts:['have / read','have / been reading','did / read','are / reading'],ans:0,cat:'Tenses',lvl:'B2',exp:'"How many" asks for a quantity — use present perfect simple, not continuous.'},
 
 // ── PAST PERFECT (pperf) ──
-{id:'pperf01',q:'When I arrived at the party, Tom ___. The flat was empty.',type:'mcq',options:['had already left','already left','was already leaving','has already left'],a:'had already left',cat:'Tenses',lvl:'B2',exp:'Past perfect describes an action completed before another past action (arrival).'},
-{id:'pperf02',q:'She failed the exam because she ___ enough.',type:'mcq',options:['hadn\'t studied','didn\'t study','wasn\'t studying','hasn\'t studied'],a:'hadn\'t studied',cat:'Tenses',lvl:'B2',exp:'The failure happened because of insufficient studying before it — past perfect for the earlier action.'},
-{id:'pperf03',q:'I recognised the actor. I ___ him in another film.',type:'mcq',options:['had seen','have seen','saw','was seeing'],a:'had seen',cat:'Tenses',lvl:'B2',exp:'The seeing happened before the recognition — past perfect for the earlier event.'},
-{id:'pperf04',q:'By the time the ambulance arrived, he ___ consciousness.',type:'mcq',options:['had lost','lost','was losing','has lost'],a:'had lost',cat:'Tenses',lvl:'B2',exp:'"By the time" signals that one past event preceded another — past perfect required.'},
-{id:'pperf05',q:'They ___ for ten minutes before the meeting started.',type:'mcq',options:['had been waiting','were waiting','had waited','waited'],a:'had been waiting',cat:'Tenses',lvl:'C1',exp:'Past perfect continuous shows an activity in progress before another past event, with emphasis on duration.'},
+{id:'pperf01',q:'When I arrived at the party, Tom ___. The flat was empty.',type:'mcq',opts:['had already left','already left','was already leaving','has already left'],ans:0,cat:'Tenses',lvl:'B2',exp:'Past perfect describes an action completed before another past action (arrival).'},
+{id:'pperf02',q:'She failed the exam because she ___ enough.',type:'mcq',opts:['hadn\'t studied','didn\'t study','wasn\'t studying','hasn\'t studied'],ans:0,cat:'Tenses',lvl:'B2',exp:'The failure happened because of insufficient studying before it — past perfect for the earlier action.'},
+{id:'pperf03',q:'I recognised the actor. I ___ him in another film.',type:'mcq',opts:['had seen','have seen','saw','was seeing'],ans:0,cat:'Tenses',lvl:'B2',exp:'The seeing happened before the recognition — past perfect for the earlier event.'},
+{id:'pperf04',q:'By the time the ambulance arrived, he ___ consciousness.',type:'mcq',opts:['had lost','lost','was losing','has lost'],ans:0,cat:'Tenses',lvl:'B2',exp:'"By the time" signals that one past event preceded another — past perfect required.'},
+{id:'pperf05',q:'They ___ for ten minutes before the meeting started.',type:'mcq',opts:['had been waiting','were waiting','had waited','waited'],ans:0,cat:'Tenses',lvl:'C1',exp:'Past perfect continuous shows an activity in progress before another past event, with emphasis on duration.'},
 
 // ── MIXED FUTURE TENSES (mft) ──
-{id:'mft01',q:'Look at those clouds! It ___ rain.',type:'mcq',options:['is going to','will','is raining','rains'],a:'is going to',cat:'Tenses',lvl:'B1',exp:'"Going to" is used for predictions based on present evidence (the clouds you can see now).'},
-{id:'mft02',q:'I promise I ___ call you tomorrow.',type:'mcq',options:['will','am going to','am calling','call'],a:'will',cat:'Tenses',lvl:'B1',exp:'"Will" is used for promises and decisions made at the moment of speaking.'},
-{id:'mft03',q:'The train ___ at 9:15. We should leave now.',type:'mcq',options:['leaves','is going to leave','will leave','is leaving'],a:'leaves',cat:'Tenses',lvl:'B1',exp:'Present simple is used for scheduled timetable events.'},
-{id:'mft04',q:'This time next week I ___ on a beach in Thailand.',type:'mcq',options:['will be lying','will lie','am lying','am going to lie'],a:'will be lying',cat:'Tenses',lvl:'B2',exp:'Future continuous describes an action in progress at a specific future time.'},
-{id:'mft05',q:'By next June she ___ her degree.',type:'mcq',options:['will have finished','will finish','is finishing','finishes'],a:'will have finished',cat:'Tenses',lvl:'B2',exp:'"By" + future time uses future perfect — the action will be completed before that point.'},
-{id:'mft06',q:'A: The phone is ringing. B: I ___ get it.',type:'mcq',options:['\'ll','\'m going to','\'m about to','go to'],a:'\'ll',cat:'Tenses',lvl:'B1',exp:'"Will" for a spontaneous decision made at the moment of speaking.'},
-{id:'mft07',q:'We ___ our friends tonight. We booked the restaurant last week.',type:'mcq',options:['are meeting','will meet','meet','are going to meet'],a:'are meeting',cat:'Tenses',lvl:'B1',exp:'Present continuous is used for fixed personal arrangements already planned.'},
+{id:'mft01',q:'Look at those clouds! It ___ rain.',type:'mcq',opts:['is going to','will','is raining','rains'],ans:0,cat:'Tenses',lvl:'B1',exp:'"Going to" is used for predictions based on present evidence (the clouds you can see now).'},
+{id:'mft02',q:'I promise I ___ call you tomorrow.',type:'mcq',opts:['will','am going to','am calling','call'],ans:0,cat:'Tenses',lvl:'B1',exp:'"Will" is used for promises and decisions made at the moment of speaking.'},
+{id:'mft03',q:'The train ___ at 9:15. We should leave now.',type:'mcq',opts:['leaves','is going to leave','will leave','is leaving'],ans:0,cat:'Tenses',lvl:'B1',exp:'Present simple is used for scheduled timetable events.'},
+{id:'mft04',q:'This time next week I ___ on a beach in Thailand.',type:'mcq',opts:['will be lying','will lie','am lying','am going to lie'],ans:0,cat:'Tenses',lvl:'B2',exp:'Future continuous describes an action in progress at a specific future time.'},
+{id:'mft05',q:'By next June she ___ her degree.',type:'mcq',opts:['will have finished','will finish','is finishing','finishes'],ans:0,cat:'Tenses',lvl:'B2',exp:'"By" + future time uses future perfect — the action will be completed before that point.'},
+{id:'mft06',q:'A: The phone is ringing. B: I ___ get it.',type:'mcq',opts:['\'ll','\'m going to','\'m about to','go to'],ans:0,cat:'Tenses',lvl:'B1',exp:'"Will" for a spontaneous decision made at the moment of speaking.'},
+{id:'mft07',q:'We ___ our friends tonight. We booked the restaurant last week.',type:'mcq',opts:['are meeting','will meet','meet','are going to meet'],ans:0,cat:'Tenses',lvl:'B1',exp:'Present continuous is used for fixed personal arrangements already planned.'},
 
 // ── PAST SIMPLE vs PAST CONTINUOUS (mixed context) ──
-{id:'ptc09',q:'While I ___ to work, I ___ an old friend.',type:'mcq',options:['was walking / ran into','walked / was running into','was walking / was running into','walked / ran into'],a:'was walking / ran into',cat:'Tenses',lvl:'B1',exp:'Ongoing background action (walking) + sudden interrupting event (ran into) — classic past continuous + past simple combination.'},
-{id:'ptc10',q:'She ___ dinner when the lights ___.',type:'mcq',options:['was cooking / went out','cooked / were going out','was cooking / were going out','cooked / went out'],a:'was cooking / went out',cat:'Tenses',lvl:'B1',exp:'Ongoing action (cooking) interrupted by a sudden event (lights went out) — past continuous + past simple.'},,
+{id:'ptc09',q:'While I ___ to work, I ___ an old friend.',type:'mcq',opts:['was walking / ran into','walked / was running into','was walking / was running into','walked / ran into'],ans:0,cat:'Tenses',lvl:'B1',exp:'Ongoing background action (walking) + sudden interrupting event (ran into) — classic past continuous + past simple combination.'},
+{id:'ptc10',q:'She ___ dinner when the lights ___.',type:'mcq',opts:['was cooking / went out','cooked / were going out','was cooking / were going out','cooked / went out'],ans:0,cat:'Tenses',lvl:'B1',exp:'Ongoing action (cooking) interrupted by a sudden event (lights went out) — past continuous + past simple.'},,
 {id:'art_b02',lvl:'B1',biz:false,cat:'Articles',type:'gap',q:'I bought ___ new phone yesterday. ___ phone has a great camera.',opts:['a','the','—'],ans:0,exp:'<strong>First mention</strong> — use <em>a</em>. Second mention of the same thing — use <em>the.</em> <em>I bought a new phone</em> (first mention, unknown) — <em>The phone has a great camera</em> (now we both know which phone).'},
 {id:'art_b03',lvl:'B1',biz:false,cat:'Articles',type:'mcq',q:'Which sentence uses articles correctly?',opts:['She is doctor.','She is the doctor.','She is a doctor.'],ans:2,exp:'<strong>Jobs and professions</strong> use the indefinite article: <em>a/an.</em> <em>She is a doctor / he is an engineer / I am a teacher.</em> Russian has no articles — this is one of the most common errors Russian speakers make.'},
 {id:'art_b04',lvl:'B1',biz:false,cat:'Articles',type:'gap',q:'Can you close ___ window, please? It is cold.',opts:['the','a','—'],ans:0,exp:'<strong>The</strong> = both speaker and listener know which window is meant — there is only one window in the room. When the context makes it clear which specific thing is meant, use <em>the.</em>'},
@@ -3791,8 +3795,8 @@ window.showTab = function(name) {
 // ── SERVICE WORKER REGISTRATION ──
 if ('serviceWorker' in navigator) {
   window.addEventListener('load', () => {
-    navigator.serviceWorker.register('./sw.js', { scope: './' })
-      .then(reg => console.log('SW registered, scope:', reg.scope))
+    navigator.serviceWorker.register('./sw.js', { scope: './', updateViaCache: 'none' })
+      .then(reg => { reg.update(); console.log('SW registered, scope:', reg.scope); })
       .catch(err => console.log('SW not registered (offline mode unavailable):', err.message));
   });
 }
