--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
   <meta http-equiv="Pragma" content="no-cache">
   <meta http-equiv="Expires" content="0">
-  <meta name="app-version" content="v20260228-57728a94">
+  <meta name="app-version" content="v20260228-959662ee">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="theme-color" content="#0f0e17">
 <meta name="mobile-web-app-capable" content="yes">
@@ -3794,7 +3794,17 @@ window.showTab = function(name) {
 <script>
 // ── SERVICE WORKER REGISTRATION ──
 if ('serviceWorker' in navigator) {
-  window.addEventListener('load', () => {
+  window.addEventListener('load', async () => {
+    // ?reset=1 → unregister all SWs and caches, then reload clean
+    if (location.search.includes('reset=1')) {
+      const regs = await navigator.serviceWorker.getRegistrations();
+      for (const r of regs) await r.unregister();
+      const keys = await caches.keys();
+      for (const k of keys) await caches.delete(k);
+      // reload without the param so we don't loop
+      location.replace(location.pathname);
+      return;
+    }
     navigator.serviceWorker.register('./sw.js', { scope: './', updateViaCache: 'none' })
       .then(reg => { reg.update(); console.log('SW registered, scope:', reg.scope); })
       .catch(err => console.log('SW not registered (offline mode unavailable):', err.message));
